--- a/index.html
+++ b/index.html
@@ -5,15 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2018044520</title>
-    <link rel="shortcut icon" href="favicon.png">
+   
+    <style>
+        html{
+            margin-top: 250px;
+           
+        }
+        body{
+            text-align: center;
+        }
+        a:link{color: black; text-decoration: none;}
+        a:visited {color: grey; text-decoration: none;}
+        a:hover {color:pink;text-decoration: none;}
+        
+        a{  border : 2px solid black;
+            font-size:20px;
+            padding:10px;
+            border-radius: 15px;
+            margin-right: 10px;
+        }
+        h1{
+            color:pink;
+            font-size: 50px;
+            font-family: 'Courier New', Courier, monospace;
+            margin-bottom: 40px;
+        }
+        p{
+            margin-top:25px;
+            font-size:13px;
+        }
+    </style>
 </head>
 <body>
     <h1>2018044520 문수림</h1>
     <div>
-        <a href="./sample.jpeg">sample.jpeg</a><br>
-        <a href="./sample.gif">sample.gif</a><br>
-        <a href="./sample.pdf">sample.pdf</a><br>
-        <a href="./sample.mp3">sample.mp3</a><br>
+        <a href="./sample.jpeg">sample.jpeg</a>
+        <a href="./sample.gif">sample.gif</a>
+        <a href="./sample.pdf">sample.pdf</a>
+        <a href="./sample.mp3">sample.mp3</a>
     </div>
+    <p> @2020 Network Server Project</p>
 </body>
 </html>
